infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  # any request coming to cluster is handled by ingress and routed
  # routing rules to redirect request to particular pods
  rules:
    # different apps hosted on localhost. it can be anything post.com
    # instead of localhost:3000 or 4000 we can use post.com
    - host: www.ticketing-app.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000  
          - path: /api/order/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000  
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000  
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
